# Demiurge

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
docs/: AUDIT-smoke-test-2026-07-02.md  IMPLEMENTATION.md  TODO.md  demiurge-mvp-design.md  goal-continuous-driving.md  ocr-models.md  ultracode-agent-orchestration.md  workflow-json-dsl.md
docs/modules/: 01-architecture-overview.md  02-agent-loop-session-engine.md  03-context-engineering.md  04-memory-system.md  05-goal-driving.md  06-multi-agent-orchestration.md  07-workflow-runtime.md  08-skills-system.md  09-llm-providers.md  10-tool-system-files.md  11-tools-shell-web.md  12-permission-security.md  13-persistence-config.md  14-pack-system.md  15-multimodal-computer-use.md  16-mcp-integration.md  17-frontend-architecture.md  18-app-shell-build.md  19-live2d-panel.md  20-lorebook-vector-rag.md  README.md
packs/default/: manifest.json  persona.md
scripts/: fetch-cubism-core.mjs  tauri.mjs
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: companion.rs  connection_tests.rs  credentials.rs  lib.rs  main.rs  media.rs  ocr.rs  pomodoro.rs  startup.rs  voice.rs
src-tauri/src/agent/: budget.rs  collapse.rs  context.rs  conversation.rs  custom.rs  dream.rs  goal.rs  memory.rs  mod.rs  persona.rs  prompt.rs  runner.rs  session_engine.rs  skills.rs  slash.rs  subagent.rs  summary.rs  ultracode.rs  workflow_journal.rs  workflow_runtime.rs
src-tauri/src/embed/: mod.rs
src-tauri/src/llm/: anthropic.rs  gemini.rs  local.rs  mod.rs  openai.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/pack/: files.rs  live2d.rs  lorebook.rs  manifest.rs  mod.rs
src-tauri/src/permission/: mod.rs
src-tauri/src/store/: mod.rs
src-tauri/src/tools/: agent_spawn.rs  args.rs  clipboard.rs  context_tools.rs  edit_file.rs  execute_tool.rs  git_status.rs  glob.rs  goal_tool.rs  grep.rs  http_get.rs  list_dir.rs  mod.rs  open_path.rs  package_scripts.rs  read_file.rs  screen.rs  shell.rs  system_info.rs  tool_search.rs  web_common.rs  web_fetch.rs  web_search.rs  worktree.rs  write_file.rs  write_plan.rs
src/components/: CompanionCard.tsx  (+21 more)
(+24 files in other folders)
