[package]
name = "demiurge"
version = "0.1.0"
description = "Demiurge — 轻量级桌面伴侣 Agent 引擎"
authors = ["DanArnoux"]
license = "MIT"
edition = "2021"

# Tauri v2 标准布局：main.rs 调用 lib.rs 的 run()
[lib]
name = "demiurge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# stream：SSE 流式读取响应体（bytes_stream）。Windows 默认 native-tls(schannel)，无需 OpenSSL
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
# Tauri 内部即用 tokio；这里显式引入 sync(oneshot)/time(timeout)/process 等
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "io-util", "process"] }
futures-util = "0.3"
walkdir = "2"
globset = "0.4"
regex = "1"
keyring = "4.1.2"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
oar-ocr = "=0.7.0"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
